# geodatasets

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: bands.csv
src/geodatasets/: __init__.py
src/geodatasets/datamodules/: __init__.py  s2.py
src/geodatasets/datasets/: __init__.py  base.py  geotiff.py  hdf5.py
src/geodatasets/metadata/: __init__.py  base.py  s2.py
src/geodatasets/preprocessing/: __init__.py  tiling.py
src/geodatasets/schemas/: __init__.py  bands.py  datamodule.py  tiles.py
src/geodatasets/scripts/: __init__.py  download.py  process_s2_catalogue.py
src/geodatasets/writers/: __init__.py  base.py  geotiff.py  hdf5.py
tests/: test_geodatasets.py
