[project]
name = "geodatasets"
version = "0.1.0"
description = "Package for conversion of geo datasets to different formats."
authors = [
    {name = "Miriam Strihavkova"}
]
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
